SONARJAVA-4750 Bypass split-package problem in tests, fixes SanityTest, AutoScanTest